# cc-switch-trans

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Documents/: Design.md  DevelopmentPlan.md
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake/: windows-qt-mingw-toolchain.cmake
dependencies/: windows-qt.lock.json
docs/: Design.md  DevelopmentPlan.md  MacOSValidationChecklist.md  Planning-0.7.0.md  Planning-0.8.0.md  ProjectStructure.md  Reconstruction.md  WindowsValidationChecklist.md
docs/Archived/: MacOSValidationCheckResult.md  Planning-0.7.0.md  Reconstruction.md  Release-0.5.0.md  Release-0.6.0.md  Release-0.7.0.md  WindowsValidationCheckResult.md
packaging/macos/: Info.plist.in
packaging/windows/: ccs-trans-tray.rc.in  qt-runtime-manifest.txt
src/: config.cpp  config.hpp  header_filter.cpp  header_filter.hpp  logger.cpp  logger.hpp  main.cpp  proxy.cpp  proxy.hpp  request_id.cpp  server.cpp  server.hpp
src/app/: app_service.cpp  app_service.hpp  application_control.hpp  application_controller.cpp  application_controller.hpp  application_status.hpp  control_executor.cpp  control_executor.hpp
src/config/: app_paths.cpp  app_paths.hpp  application_config.cpp  application_config.hpp  application_settings.hpp  composite_config_repository.cpp  composite_config_repository.hpp  config.cpp  config.hpp  config_cli.cpp  config_cli.hpp  config_document.cpp  config_document.hpp  config_editing_service.cpp  config_editing_service.hpp  config_repository.hpp  config_store.cpp  config_store.hpp  configuration_conversion.hpp  configuration_editor.cpp  configuration_editor.hpp  configuration_repository.hpp  configuration_snapshot.cpp  configuration_snapshot.hpp  field_descriptor.cpp  field_descriptor.hpp  profile_model.hpp  profile_store.cpp  profile_store.hpp  rules_text.cpp  rules_text.hpp  runtime_compiler.cpp  runtime_compiler.hpp
src/core/: app_service.cpp  app_service.hpp  cancellation.cpp  cancellation.hpp  http_types.hpp  inflight_memory_budget.cpp  inflight_memory_budget.hpp  request_id.cpp  request_id.hpp  runtime_metrics.cpp  runtime_metrics.hpp  sha256.cpp  sha256.hpp  task.cpp  task.hpp  task_router.cpp  task_router.hpp  timeouts.hpp  transform.cpp  transform.hpp  url.cpp  url.hpp  version.hpp.in
src/gui/windows/: CMakeLists.txt
src/gui/windows/app/: gui_main.cpp
src/gui/windows/controllers/: command_dispatcher.cpp  command_dispatcher.hpp
src/gui/windows/diagnostics/: frame_monitor.cpp  frame_monitor.hpp
src/gui/windows/features/migration/: migration_controller.cpp  migration_controller.hpp
src/gui/windows/features/profiles/: profiles_controller.cpp  profiles_controller.hpp
src/gui/windows/features/rules/: rules_controller.cpp  rules_controller.hpp
src/gui/windows/features/settings/: settings_controller.cpp  settings_controller.hpp
src/gui/windows/interaction/: animation_policy.cpp  animation_policy.hpp
src/gui/windows/ipc/: bootstrap_reader.cpp  bootstrap_reader.hpp  gui_ipc_client.cpp  gui_ipc_client.hpp
src/gui/windows/lifecycle/: gui_window_controller.cpp  gui_window_controller.hpp
src/gui/windows/models/: configuration_field_model.cpp  configuration_field_model.hpp  editable_field_model.cpp  editable_field_model.hpp  profile_summary_model.cpp  profile_summary_model.hpp
src/gui/windows/prototype/: profile_list_model.cpp  profile_list_model.hpp  prototype_controller.cpp  prototype_controller.hpp
src/gui/windows/state/: gui_state_store.cpp  gui_state_store.hpp
src/gui/windows/tests/: gui_feature_controller_tests.cpp  gui_ipc_client_tests.cpp  profile_list_model_tests.cpp  qml_test_main.cpp
src/gui/windows/tests/qml/: tst_motion_controls.qml
src/gui/windows/ui/: Main.qml  PrototypeProbe.qml  Theme.qml
src/gui/windows/ui/components/: ApplicationDialogs.qml  DecisionDialog.qml  FieldEditorRow.qml  MotionButton.qml  MotionComboBox.qml  MotionScrollBar.qml  MotionSwitch.qml  MotionTextField.qml  NavigationTab.qml  ProfileDelegate.qml  ProfileSummaryDelegate.qml
src/gui/windows/ui/features/: ProfilesPage.qml  RulesPage.qml  SettingsPage.qml
src/gui_ipc/: frame_codec.cpp  frame_codec.hpp  json_codec.cpp  json_codec.hpp  json_codec_support.hpp  json_command_codec.cpp  json_state_codec.cpp  json_state_types.cpp  json_state_types.hpp  protocol_types.cpp  protocol_types.hpp  session.cpp  session.hpp
src/hosts/: cli_main.cpp  control_executor.cpp  host_platform.cpp  host_platform.hpp
src/logging/: logger.cpp  logger.hpp
src/presentation/: main_window_contract.cpp  main_window_contract.hpp  main_window_view_model.cpp  main_window_view_model.hpp  ui_preferences.cpp  ui_preferences.hpp  ui_preferences_repository.hpp  ui_preferences_store.cpp  ui_preferences_store.hpp
src/protocols/: chat_handler.cpp  chat_handler.hpp  messages_handler.cpp  messages_handler.hpp  protocol_handler.cpp  protocol_handler.hpp  protocol_registry.cpp  protocol_registry.hpp  responses_handler.cpp  responses_handler.hpp
src/routing/: profile.hpp  route_table.cpp  route_table.hpp
src/rules/: generic_json_rules.cpp  generic_json_rules.hpp  remove_tool_rule.cpp  remove_tool_rule.hpp  rule.cpp  rule.hpp  rule_json.cpp  rule_json.hpp  rule_registry.cpp  rule_registry.hpp
src/runtime/: runtime_snapshot.hpp
src/server/: server.cpp  server.hpp
src/storage/: sqlite_profile_store.cpp  sqlite_profile_store.hpp
src/transforms/: findcg_responses_transform.cpp  findcg_responses_transform.hpp
src/transport/: header_filter.cpp  header_filter.hpp  proxy.cpp  proxy.hpp  upstream_transport.cpp  upstream_transport.hpp
tests/: mock_upstream.py  run_integration.py
tools/: build_windows_installer_prototype.ps1  check_gui_structure.cmake  check_stage12_prerequisites.ps1  check_stage13_prerequisites.sh  deploy_windows_qt_gui.ps1  generate_icons.ps1  generate_macos_icons.sh  measure_windows_gui_baseline.ps1  package_macos.sh  package_windows.ps1  run_windows_qt_tray_integration.ps1  test_windows_installer_prototype.ps1  verify_macos_package.sh  verify_windows_package.ps1
(+112 files in other folders)
